--- a/AI-vision-screenshots/ai-search.html
+++ b/AI-vision-screenshots/ai-search.html
@@ -283,10 +283,10 @@ Search results</h1>
 
 <h3 class="h5">Ask Canada.ca | AI overview</h3>
 <div class="well" style="background-color: white !important;">
-<p><span style="background-color:#d9edf7 !important; padding: 10px 10px;">Yes, if you change your last name, you need to apply for a new passport</span>as your passport must reflect your current legal name, meaning you cannot simply renew your existing passport with the old name; you need to submit a new application with your updated information.<i class="fa-solid fa-link"></i></p>
+<p class="small"><span style="background-color:#d9edf7 !important; padding: 10px 10px; font-weight:bold;">Yes, if you change your last name, you need to apply for a new passport</span>as your passport must reflect your current legal name, meaning you cannot simply renew your existing passport with the old name; you need to submit a new application with your updated information.
 
-<p>Key points about changing your name on Canadian passport:</p>
-<ul>
+<p class="small">Key points about changing your name on Canadian passport:</p>
+<ul class="small">
   <li><b>New application required</b>: Even if your current passport is still valid, you need to aplly for a new one to update your name</li>
   <li><b>Supporting documents</b>: ...</li>
 </ul>
