--- a/jmtesting/form-submit/test.html
+++ b/jmtesting/form-submit/test.html
@@ -110,14 +110,14 @@
 			  font-size: 20px;
 			  color: #333;
 			  font-family: "Noto Sans";
-			  padding-top: 8px;
-			  padding-bottom: 10px;
-			  color: purple;
+			  padding-top: 10px;
+			  padding-bottom: 16px;
+			  /* color: purple; */
 			  display: block;
 			}
 		
-			.field-container textarea {
-			  border-color: #333 !important;
+		textarea {
+			  border-color: #333;
 			  border-radius: 3px !important;
 			  border: solid !important;
 			  border-width: 2px !important;
@@ -132,6 +132,14 @@
 			  display: none;
 			}
 		
+		textarea:focus {
+			border-radius: var(--gcds-details-focus-border-radius);
+			box-shadow: 0 0 0 0.125rem #fff;
+			border-color: #0535d2;
+			outline: 3px solid #0535d2;
+			outline-offset: 0.225rem;;
+			}
+
 			/* Media query for mobile */
 			@media screen and (max-width: 600px) {
 			  .button-text {
