--- a/jmtesting/form-submit/test-2.html
+++ b/jmtesting/form-submit/test-2.html
@@ -142,6 +142,10 @@ label {
   display: block;
 }
 
+.field-container:focus-within .hint-text {
+  color: #0535d2;
+}
+
 /* Focus states */
 .form-group:focus-within {
   border-color: #0535d2;
@@ -380,6 +384,7 @@ textarea:focus {
 		<li>no longer permits a submit for blank entry</li>
 		<li>button visually integrated into input</li>
 		<li>button transitions to icon only on mobile to save space</li>
+		<li>hint text changes colour on focus</li>
 	</ul>
 </div>
 <form class="mrgn-tp-xl mrgn-bttm-lg">
