--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -142,7 +142,8 @@
 </section>
 <div class="container"><section class="gc-srvinfo">
 	<h2 class="wb-inv">Services and information</h2>
-	<div class="row wb-eqht-grd"><div class="col-lg-4 col-md-6">
+	<div class="row wb-eqht-grd">
+		<div class="col-lg-4 col-md-6">
 			<h3><a href="#">Becoming a caregiver</a></h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 		</div><div class="col-lg-4 col-md-6">
