--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -108,7 +108,7 @@
 				<li><a href="#">Benefits</a></li>
 				<li><a href="#">Health</a></li>
 				<li><a href="#">Taxes</a></li>
-				<li class="active"><a href="#">Life's transitions</a></li>
+				<li class="active"><a href="#">Life transitions</a></li>
 				<li><a href="#">Environment and natural resources</a></li>
 				<li><a href="#">National security and defence</a></li>
 				<li><a href="#">Culture, history and sport</a></li>
@@ -143,28 +143,35 @@
 			<section class="gc-srvinfo">
 				<h2 class="wb-inv">Services and information</h2>
 				<div class="wb-eqht-grd row">
-					<div class="col-lg-4 col-md-6">
+					<div class="col-md-6">
 						<h3><a href="#">Becoming a caregiver</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-					</div><div class="col-lg-4 col-md-6">
+					</div>
+					<div class="col-md-6">
 						<h3><a href="#">Coming to Canada</a></h3>
 						<p>Visit, work, study, immigrate, refugees, permanent residents, apply, check status</p>
-					</div><div class="col-lg-4 col-md-6">
+					</div>
+					<div class="col-md-6">
 						<h3><a href="#">Living with a disability</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-					</div><div class="col-lg-4 col-md-6">
+					</div>
+					<div class="col-md-6">
 						<h3><a href="#">Losing and finding a job</a></h3>
 						<p>Find a job, training, hiring programs, work permits, Social Insurance Number (SIN)</p>
-					</div><div class="col-lg-4 col-md-6">
+					</div>
+					<div class="col-md-6">
 						<h3><a href="#">Planning for education and upskilling</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-					</div><div class="col-lg-4 col-md-6">
+					</div>
+					<div class="col-md-6">
 						<h3><a href="#">Retirement Hub</a></h3>
 						<p>Retirement options and tips, public pensions, Canada Pension Plan (CPP), Old Age Security (OAS), Guaranteed Income Supplement (GIS), when to retire</p>
-					</div><div class="col-lg-4 col-md-6">
+					</div>
+					<div class="col-md-6">
 						<h3><a href="#">Starting and expanding a family</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-					</div><div class="col-lg-4 col-md-6">
+					</div>
+					<div class="col-md-6">
 						<h3><a href="#">What to do when someone dies</a></h3>
 						<p>What to do, who to inform, preparing for end of life, representing someone who died, apply or make changes to benefits</p>
 					</div>
@@ -183,7 +190,7 @@
 	</div>
 	<dl id="wb-dtmd">
 		<dt>Date modified:</dt>
-		<dd><time property="dateModified">2025-01-22</time></dd>
+		<dd><time property="dateModified">2024-06-10</time></dd>
 	</dl>
 </section>
 
