--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -108,7 +108,7 @@
 				<li><a href="#">Benefits</a></li>
 				<li><a href="#">Health</a></li>
 				<li><a href="#">Taxes</a></li>
-				<li class="active"><a href="#">Life transitions</a></li>
+				<li class="active"><a href="#">Life's transitions</a></li>
 				<li><a href="#">Environment and natural resources</a></li>
 				<li><a href="#">National security and defence</a></li>
 				<li><a href="#">Culture, history and sport</a></li>
