--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -240,14 +240,14 @@
 					<li><a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a></li></ul>
 			</nav>
 			<div class="wtrmrk align-self-end">
-				<img src="/wet-boew-demos/theme-menu/dist/GCWeb/assets/wmms-blk.svg" alt="Symbol of the Government of Canada" />
+				<img src="https://servicecanada.github.io//wet-boew-demos/theme-menu/dist/GCWeb/assets/wmms-blk.svg" alt="Symbol of the Government of Canada" />
 			</div>
 		</div>
 	</div>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha384-rY/jv8mMhqDabXSo+UCggqKtdmBfd3qC2/KvyTDNQ6PcUJXaxK1tMepoQda4g5vB" crossorigin="anonymous"></script>
-<script src="/wet-boew-demos/theme-menu/dist/wet-boew/js/wet-boew.js"></script>
-<script src="/wet-boew-demos/theme-menu/dist/GCWeb/js/theme.js"></script>
+<script src="https://servicecanada.github.io//wet-boew-demos/theme-menu/dist/wet-boew/js/wet-boew.js"></script>
+<script src="https://servicecanada.github.io//wet-boew-demos/theme-menu/dist/GCWeb/js/theme.js"></script>
 </body>
 </html>
