add to footer, reposition

--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -108,7 +108,6 @@
 				<li><a href="#">Benefits</a></li>
 				<li><a href="#">Health</a></li>
 				<li><a href="#">Taxes</a></li>
-				<li class="active"><a href="#">Life's transitions</a></li>
 				<li><a href="#">Environment and natural resources</a></li>
 				<li><a href="#">National security and defence</a></li>
 				<li><a href="#">Culture, history and sport</a></li>
@@ -117,6 +116,7 @@
 				<li><a href="#">Canada and the world</a></li>
 				<li><a href="#">Money and finances</a></li>
 				<li><a href="#">Science and innovation</a></li>
+				<li class="active"><a href="#">Life's transitions</a></li>
 				<li><a href="#">Indigenous peoples</a></li>
 				<li><a href="#">Veterans and military</a></li>
 				<li><a href="#">Youth</a></li>
@@ -222,6 +222,7 @@
 					<li><a href="https://www.international.gc.ca/world-monde/index.aspx?lang=eng">Canada and the world</a></li>
 					<li><a href="https://www.canada.ca/en/services/finance.html">Money and finance</a></li>
 					<li><a href="https://www.canada.ca/en/services/science.html">Science and innovation</a></li>
+					<li><a href="#">Life's transitions</a></li>
 					<li><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous peoples</a></li>
 					<li><a href="https://www.canada.ca/en/services/veterans-military.html">Veterans and military</a></li>
 					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li></ul>
