--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -236,6 +236,7 @@
 					<li><a href="https://www.international.gc.ca/world-monde/index.aspx?lang=eng">Canada and the world</a></li>
 					<li><a href="https://www.canada.ca/en/services/finance.html">Money and finances</a></li>
 					<li><a href="https://www.canada.ca/en/services/science.html">Science and innovation</a></li>
+					<li><a href="#">Life's transitions</a></li>
 					<li><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous Peoples</a></li>
 					<li><a href="https://www.canada.ca/en/services/veterans-military.html">Veterans and military</a></li>
 					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li></ul>
