--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -122,7 +122,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-6"><h1 property="name" id="wb-cont">Supporting you through life's transitions</h1>
-			<p>A comprehensive hub provides resources and support to help Canadians navigate key life changes, ensuring access to relevant information and services during significant transitions.</p>
+			<p>Find resources and support to help navigate life’s transitions. Includes, planning for retirement, welcoming a child and what to do when someone dies.</p>
 		</div>
 		<div class="col-md-6 hidden-sm hidden-xs">
 			<img src="images/life-events.jpg" alt="" class="img-responsive pull-right mrgn-tp-lg">
@@ -159,10 +159,10 @@
 			<h3><a href="#">Planning for education and upskilling</a></h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 		</div><div class="col-lg-4 col-md-6">
-			<h3><a href="#">Retirement Hub</a></h3>
+			<h3><a href="#">Learn and plan for your retirement</a></h3>
 			<p>Retirement options and tips, public pensions, Canada Pension Plan (CPP), Old Age Security (OAS), Guaranteed Income Supplement (GIS), when to retire</p>
 		</div><div class="col-lg-4 col-md-6">
-			<h3><a href="#">Starting and expanding a family</a></h3>
+			<h3><a href="#">Welcoming a child</a></h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 		</div><div class="col-lg-4 col-md-6">
 			<h3><a href="#">What to do when someone dies</a></h3>
