--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -164,11 +164,11 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 					</div>
 					<div class="col-md-6">
-						<h3><a href="#">Retirement Hub</a></h3>
+						<h3><a href="#">Learn and plan for your retirement</a></h3>
 						<p>Retirement options and tips, public pensions, Canada Pension Plan (CPP), Old Age Security (OAS), Guaranteed Income Supplement (GIS), when to retire</p>
 					</div>
 					<div class="col-md-6">
-						<h3><a href="#">Starting and expanding a family</a></h3>
+						<h3><a href="#">Welcoming a child</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 					</div>
 					<div class="col-md-6">
