--- a/jmtesting/can-us-tariffs/list-of-products-25-tariffs.html
+++ b/jmtesting/can-us-tariffs/list-of-products-25-tariffs.html
@@ -111,13 +111,13 @@
 						</td>
 						<td data-label="Harmonized System (HS) Heading">
 						 <span class="text-left">
-						  Live poultry, that is to say, fowls of the species Gallus domesticus, ducks, geese, turkeys and guinea fowls.
+						  Live poultry, that is to say, fowls of the species Gallus domesticus (chicken), ducks, geese, turkeys and guinea fowls.
 						 </span>
 						</td>
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Weighing not more than 185 g: Fowls of the species Gallus domesticus
+						   Weighing not more than 185 g: Fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Broilers for domestic production: Over access commitment
@@ -131,13 +131,13 @@
 						</td>
 						<td data-label="Harmonized System (HS) Heading">
 						 <span class="text-left">
-						  Live poultry, that is to say, fowls of the species Gallus domesticus, ducks, geese, turkeys and guinea fowls.
+						  Live poultry, that is to say, fowls of the species Gallus domesticus (chicken), ducks, geese, turkeys and guinea fowls.
 						 </span>
 						</td>
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Other: Fowls of the species Gallus domesticus
+						   Other: Fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Other: Over access commitment
@@ -151,7 +151,7 @@
 						</td>
 						<td data-label="Harmonized System (HS) Heading">
 						 <span class="text-left">
-						  Live poultry, that is to say, fowls of the species Gallus domesticus, ducks, geese, turkeys and guinea fowls.
+						  Live poultry, that is to say, fowls of the species Gallus domesticus (chicken), ducks, geese, turkeys and guinea fowls.
 						 </span>
 						</td>
 						<td data-label="Indicative Description">
@@ -177,7 +177,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Not cut in pieces, fresh or chilled
+						   Of fowls of the species Gallus domesticus (chicken): Not cut in pieces, fresh or chilled
 						  </li>
 						  <li>
 						   Other: Within access commitment
@@ -197,7 +197,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Not cut in pieces, fresh or chilled
+						   Of fowls of the species Gallus domesticus (chicken): Not cut in pieces, fresh or chilled
 						  </li>
 						  <li>
 						   Other: Over access commitment
@@ -217,7 +217,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Not cut in pieces, frozen
+						   Of fowls of the species Gallus domesticus (chicken): Not cut in pieces, frozen
 						  </li>
 						  <li>
 						   Other: Within access commitment
@@ -237,7 +237,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Not cut in pieces, frozen
+						   Of fowls of the species Gallus domesticus (chicken): Not cut in pieces, frozen
 						  </li>
 						  <li>
 						   Other: Over access commitment
@@ -257,7 +257,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Cuts and offal, fresh or chilled
+						   Of fowls of the species Gallus domesticus (chicken): Cuts and offal, fresh or chilled
 						  </li>
 						  <li>
 						   Other: Over access commitment, bone in
@@ -277,7 +277,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Cuts and offal, fresh or chilled
+						   Of fowls of the species Gallus domesticus (chicken): Cuts and offal, fresh or chilled
 						  </li>
 						  <li>
 						   Other: Over access commitment, boneless
@@ -297,7 +297,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Cuts and offal, frozen
+						   Of fowls of the species Gallus domesticus (chicken): Cuts and offal, frozen
 						  </li>
 						  <li>
 						   Livers: Within access commitment
@@ -317,7 +317,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Cuts and offal, frozen
+						   Of fowls of the species Gallus domesticus (chicken): Cuts and offal, frozen
 						  </li>
 						  <li>
 						   Livers: Over access commitment
@@ -337,7 +337,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Cuts and offal, frozen
+						   Of fowls of the species Gallus domesticus (chicken): Cuts and offal, frozen
 						  </li>
 						  <li>
 						   Other: Within access commitment
@@ -357,7 +357,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Cuts and offal, frozen
+						   Of fowls of the species Gallus domesticus (chicken): Cuts and offal, frozen
 						  </li>
 						  <li>
 						   Other: Over access commitment, bone in
@@ -377,7 +377,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus: Cuts and offal, frozen
+						   Of fowls of the species Gallus domesticus (chicken): Cuts and offal, frozen
 						  </li>
 						  <li>
 						   Other: Over access commitment, boneless
@@ -700,7 +700,7 @@
 						   Other
 						  </li>
 						  <li>
-						   Fat of fowls of the species Gallus domesticus, within access commitment
+						   Fat of fowls of the species Gallus domesticus (chicken), within access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -720,7 +720,7 @@
 						   Other
 						  </li>
 						  <li>
-						   Fat of fowls of the species Gallus domesticus, over access commitment
+						   Fat of fowls of the species Gallus domesticus (chicken), over access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -800,7 +800,7 @@
 						   Other, including edible flours and meals of meat or meat offal: Other
 						  </li>
 						  <li>
-						   Meat of poultry: Of fowls of the species Gallus domesticus, within access commitment
+						   Meat of poultry: Of fowls of the species Gallus domesticus (chicken), within access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -820,7 +820,7 @@
 						   Other, including edible flours and meals of meat or meat offal: Other
 						  </li>
 						  <li>
-						   Meat of poultry: Of fowls of the species Gallus domesticus, over access commitment, bone in
+						   Meat of poultry: Of fowls of the species Gallus domesticus (chicken), over access commitment, bone in
 						  </li>
 						 </ul>
 						</td>
@@ -840,7 +840,7 @@
 						   Other, including edible flours and meals of meat or meat offal: Other
 						  </li>
 						  <li>
-						   Meat of poultry: Of fowls of the species Gallus domesticus, over access commitment, boneless
+						   Meat of poultry: Of fowls of the species Gallus domesticus (chicken), over access commitment, boneless
 						  </li>
 						 </ul>
 						</td>
@@ -1717,7 +1717,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Fertilized eggs for incubation: Of fowls of the species Gallus domesticus
+						   Fertilized eggs for incubation: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Hatching, for broilers: Over access commitment
@@ -1737,7 +1737,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Fertilized eggs for incubation: Of fowls of the species Gallus domesticus
+						   Fertilized eggs for incubation: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Other: Over access commitment
@@ -1757,7 +1757,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Other fresh eggs: Of fowls of the species Gallus domesticus
+						   Other fresh eggs: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Over access commitment
@@ -1780,7 +1780,7 @@
 						   Other
 						  </li>
 						  <li>
-						   Of the fowls of the species Gallus domesticus: Within access commitment
+						   Of the fowls of the species Gallus domesticus (chicken): Within access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -1800,7 +1800,7 @@
 						   Other
 						  </li>
 						  <li>
-						   Of the fowls of the species Gallus domesticus: Over access commitment
+						   Of the fowls of the species Gallus domesticus (chicken): Over access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -3575,7 +3575,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus, other than in cans or glass jars: Other than spent fowl, within access commitment
+						   Of fowls of the species Gallus domesticus (chicken), other than in cans or glass jars: Other than spent fowl, within access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -3592,7 +3592,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus, other than in cans or glass jars: Other than spent fowl, over access commitment
+						   Of fowls of the species Gallus domesticus (chicken), other than in cans or glass jars: Other than spent fowl, over access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -3609,7 +3609,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of fowls of the species Gallus domesticus, other than in cans or glass jars: Spent fowl
+						   Of fowls of the species Gallus domesticus (chicken), other than in cans or glass jars: Spent fowl
 						  </li>
 						 </ul>
 						</td>
@@ -3680,7 +3680,7 @@
 						   Homogenized preparations
 						  </li>
 						  <li>
-						   Of fowls of the species Gallus domesticus and turkeys, of heading 01.05
+						   Of fowls of the species Gallus domesticus (chicken) and turkeys, of heading 01.05
 						  </li>
 						 </ul>
 						</td>
@@ -3720,7 +3720,7 @@
 						   Of liver of any animal
 						  </li>
 						  <li>
-						   Paste, of fowls of the species Gallus domesticus, not in cans or glass jars: Within access commitment
+						   Paste, of fowls of the species Gallus domesticus (chicken), not in cans or glass jars: Within access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -3740,7 +3740,7 @@
 						   Of liver of any animal
 						  </li>
 						  <li>
-						   Paste, of fowls of the species Gallus domesticus, not in cans or glass jars: Over access commitment
+						   Paste, of fowls of the species Gallus domesticus (chicken), not in cans or glass jars: Over access commitment
 						  </li>
 						 </ul>
 						</td>
@@ -3997,7 +3997,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Prepared meals: Of spent fowl; Specially defined mixtures
@@ -4017,7 +4017,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Prepared meals: Other, within access commitment
@@ -4037,7 +4037,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Prepared meals: Other, over access commitment, bone in
@@ -4057,7 +4057,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Prepared meals: Other, over access commitment, boneless
@@ -4077,7 +4077,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Other: In cans or glass jars
@@ -4097,7 +4097,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Other: Specially defined mixtures, other than in cans or glass jars; Spent fowl other than in cans or glass jars
@@ -4117,7 +4117,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Other: Other, within access commitment
@@ -4137,7 +4137,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Other: Other, over access commitment, bone in
@@ -4157,7 +4157,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus
+						   Of poultry of heading 01.05: Of fowls of the species Gallus domesticus (chicken)
 						  </li>
 						  <li>
 						   Other: Other, over access commitment, boneless
