--- a/jmtesting/can-us-tariffs/list-of-products-25-tariffs.html
+++ b/jmtesting/can-us-tariffs/list-of-products-25-tariffs.html
@@ -23297,7 +23297,7 @@
 						<td data-label="Indicative Description">
 						 <ul class="text-left">
 						  <li>
-						   Other: Paintings, drawings and pastels
+						   Other: Paintings, drawings and pastels (artwork)
 						  </li>
 						  <li>
 						   Originals by artists
