--- a/jmtesting/can-us-tariffs/list-of-products-25-tariffs.html
+++ b/jmtesting/can-us-tariffs/list-of-products-25-tariffs.html
@@ -81,7 +81,7 @@
 			</div>
 			<div class="col-md-12">
 				<div class="row">
-			<h2>Find a U.S. origin products affected</h2>
+			<h2>Find a U.S. origin product affected</h2>
 			<table class="provisional gc-table table wb-tables table-striped" id="myTable5">
 				<caption>The $30 Billion List – Tariff Line Level</caption>
 				<thead>
