--- a/jmtesting/can-us-tariffs/list-of-products-25-tariffs.html
+++ b/jmtesting/can-us-tariffs/list-of-products-25-tariffs.html
@@ -8,7 +8,7 @@
 		<title>List of products from the United States subject to 25 per cent tariffs effective March 4, 2025 - Canada.ca	</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
-		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
+		<meta name="description" content="">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<!--
