--- a/can-us/can-us-landing-en.html
+++ b/can-us/can-us-landing-en.html
@@ -55,8 +55,9 @@
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
-			<h1 property="name" id="wb-cont">CDTS Samples</h1>
-			
+			<h1 property="name" id="wb-cont">Canada and the United States: Current situation</h1>
+			<p>Canada and the United States have built a successful economic, military and security partnership that has created vast opportunities and longstanding prosperity for both countries.</p>
+			<p>Find information to help you manage the potential effects of the evolving Canada-U.S. relationship.</p>
             <div id="def-preFooter">
 				<!-- Write closure fall-back static file -->
 				<!-- preFooter-en.html -->
