lang toggle links

--- a/can-us/can-us-landing-fr.html
+++ b/can-us/can-us-landing-fr.html
@@ -32,9 +32,9 @@
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
-					"lang": "fr",
-					"href": "index-fr.html",
-					"text": "Français"
+					"lang": "en",
+					"href": "can-us-landing-en.html",
+					"text": "English"
 				}],
 				"breadcrumbs": [{
 					"title": "Canada.ca",
