--- a/can-us/can-us-landing-en.html
+++ b/can-us/can-us-landing-en.html
@@ -35,7 +35,7 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "fr",
-					"href": "index-fr.html",
+					"href": "can-us-landing-fr.html",
 					"text": "Français"
 				}],
 				"breadcrumbs": [{
