--- a/can-us/can-us-landing-fr.html
+++ b/can-us/can-us-landing-fr.html
@@ -70,7 +70,7 @@
 						<div class="col-md-9">
 						<div class="mrgn-tp-sm">
 							<ul class="mrgn-tp-0 mrgn-bttm-md colcount-md-1">
-								<li><a href="">See all related news</a></li>
+								<li><a href=""><mark>See all related news</mark></a></li>
 							</ul>
 						</div>
 					</div>
@@ -85,7 +85,7 @@
 						</div>
 						<div class="col-md-9">
 							<ul class="mrgn-tp-0 mrgn-bttm-md colcount-md-1">
-								<li><a href="https://www.bdc.ca/fr/articles-outils/boite-outils-entrepreneur/gabarits-documents-guides-affaires/glossaire/tarifs">What is a tariff?</a></li>
+								<li><a href="https://www.bdc.ca/fr/articles-outils/boite-outils-entrepreneur/gabarits-documents-guides-affaires/glossaire/tarifs"><mark>What is a tariff?</mark></a></li>
 								<li><a href="https://international.canada.ca/fr/services/entreprises/commerce/tarifs-reglementations">Tarifs douaniers, règles et réglementations</a></li>
 								<li><a href="https://www.international.gc.ca/trade-commerce/trade-agreements-accords-commerciaux/agr-acc/cptpp-ptpgp/tariff_country_product-information-tarifaire_pays_produit.aspx?lang=fra">Obtenez l’information tarifaire par pays et par produit</a></li>
 								<li><a href="https://www.cbsa-asfc.gc.ca/trade-commerce/tariff-tarif/menu-fra.html">Tarif des douanes canadien</a></li>
