--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -121,11 +121,8 @@
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 <div class="container">
 	<div class="row">
-		<div class="col-md-6"><h1 property="name" id="wb-cont">Supporting you through life's transitions</h1>
+		<div class="col-md-8"><h1 property="name" id="wb-cont">Supporting you through life's transitions</h1>
 			<p>Find resources and support to help navigate life’s transitions. Includes, planning for retirement, welcoming a child and what to do when someone dies.</p>
-		</div>
-		<div class="col-md-6 hidden-sm hidden-xs">
-			<img src="images/life-events.jpg" alt="" class="img-responsive pull-right mrgn-tp-lg">
 		</div>
 	</div>
 </div><section class="gc-most-requested">
@@ -143,7 +140,7 @@
 <div class="container"><section class="gc-srvinfo">
 	<h2 class="wb-inv">Services and information</h2>
 	<div class="row wb-eqht-grd">
-		<div class="col-lg-4 col-md-6">
+		<!-- <div class="col-lg-4 col-md-6">
 			<h3><a href="#">Becoming a caregiver</a></h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 		</div><div class="col-lg-4 col-md-6">
@@ -157,7 +154,7 @@
 			<p>Find a job, training, hiring programs, work permits, Social Insurance Number (SIN)</p>
 		</div><div class="col-lg-4 col-md-6">
 			<h3><a href="#">Planning for education and upskilling</a></h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p> -->
 		</div><div class="col-lg-4 col-md-6">
 			<h3><a href="#">Learn and plan for your retirement</a></h3>
 			<p>Retirement options and tips, public pensions, Canada Pension Plan (CPP), Old Age Security (OAS), Guaranteed Income Supplement (GIS), when to retire</p>
@@ -170,34 +167,7 @@
 		</div>
 	</div>
 </section>
-<div class="row mrgn-tp-xl">
-	<section class="gc-features">
-		<h2>Features</h2>
-		<div class="row wb-eqht-grd">
-			<div class="col-lg-4 col-sm-6">
-				<div class="well well-sm eqht-trgt">
-					<img src="images/feature-1.jpg" alt="">
-					<h3><a href="#" class="stretched-link">Domestic violence awareness</a></h3>
-					<p>Find information on family violence</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="well well-sm eqht-trgt">
-					<img src="images/feature-2.jpg" alt="">
-					<h3><a href="#" class="stretched-link">Request a change to your taxes </a></h3>
-					<p>Brief description of the feature being promoted.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="well well-sm eqht-trgt">
-					<img src="images/feature-3.jpg" alt="">
-					<h3><a href="#" class="stretched-link">Video: What is My Service Canada Account</a></h3>
-					<p>Brief description of the feature being promoted.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-</div>
+
 </div>
 
 <section class="pagedetails container">
