--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -154,8 +154,9 @@
 			<p>Find a job, training, hiring programs, work permits, Social Insurance Number (SIN)</p>
 		</div><div class="col-lg-4 col-md-6">
 			<h3><a href="#">Planning for education and upskilling</a></h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p> -->
-		</div><div class="col-lg-4 col-md-6">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p> 
+		</div>-->
+		<div class="col-lg-4 col-md-6">
 			<h3><a href="#">Learn and plan for your retirement</a></h3>
 			<p>Retirement options and tips, public pensions, Canada Pension Plan (CPP), Old Age Security (OAS), Guaranteed Income Supplement (GIS), when to retire</p>
 		</div><div class="col-lg-4 col-md-6">
