--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -143,7 +143,7 @@
 			<section class="gc-srvinfo">
 				<h2 class="wb-inv">Services and information</h2>
 				<div class="wb-eqht-grd row">
-					<div class="col-md-6">
+					<!-- <div class="col-md-6">
 						<h3><a href="#">Becoming a caregiver</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 					</div>
@@ -158,11 +158,11 @@
 					<div class="col-md-6">
 						<h3><a href="#">Losing and finding a job</a></h3>
 						<p>Find a job, training, hiring programs, work permits, Social Insurance Number (SIN)</p>
-					</div>
+					</div> 
 					<div class="col-md-6">
 						<h3><a href="#">Planning for education and upskilling</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-					</div>
+					</div>-->
 					<div class="col-md-6">
 						<h3><a href="#">Learn and plan for your retirement</a></h3>
 						<p>Retirement options and tips, public pensions, Canada Pension Plan (CPP), Old Age Security (OAS), Guaranteed Income Supplement (GIS), when to retire</p>
