--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -116,7 +116,7 @@
 				<li><a href="#">Canada and the world</a></li>
 				<li><a href="#">Money and finances</a></li>
 				<li><a href="#">Science and innovation</a></li>
-				<li class="active"><a href="#">Life's transitions</a></li>
+				<li class="active"><a href="#">Manage life events</a></li>
 				<li><a href="#">Indigenous peoples</a></li>
 				<li><a href="#">Veterans and military</a></li>
 				<li><a href="#">Youth</a></li>
@@ -125,7 +125,7 @@
 	</nav>
 	<section>
 		<div class="container">
-			<h1 id="wb-cont">Supporting you through life's transitions</h1>
+			<h1 id="wb-cont">Manage life events</h1>
 		</div>
 		<section class="gc-most-requested">
 			<div class="container">
