--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -121,7 +121,7 @@
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 <div class="container">
 	<div class="row">
-		<div class="col-md-8"><h1 property="name" id="wb-cont">Supporting you through life's transitions</h1>
+		<div class="col-md-8"><h1 property="name" id="wb-cont">Manage life events</h1>
 			<p>Find resources and support to help navigate life’s transitions. Includes, planning for retirement, welcoming a child and what to do when someone dies.</p>
 		</div>
 	</div>
