--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -161,7 +161,7 @@
 			<p>Retirement options and tips, public pensions, Canada Pension Plan (CPP), Old Age Security (OAS), Guaranteed Income Supplement (GIS), when to retire</p>
 		</div><div class="col-lg-4 col-md-6">
 			<h3><a href="#">Welcoming a child</a></h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+			<p>Becoming a parent, financial support, leave options, register your child's birth, childcare and education savings, health and wellness</p>
 		</div><div class="col-lg-4 col-md-6">
 			<h3><a href="#">What to do when someone dies</a></h3>
 			<p>What to do, who to inform, preparing for end of life, representing someone who died, apply or make changes to benefits</p>
