--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -169,7 +169,7 @@
 					</div>
 					<div class="col-md-6">
 						<h3><a href="#">Welcoming a child</a></h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+						<p>Becoming a parent, financial support, leave options, register your child's birth, childcare and education savings, health and wellness</p>
 					</div>
 					<div class="col-md-6">
 						<h3><a href="#">What to do when someone dies</a></h3>
