--- a/life-events/hub-link-demo/feature-as-hub-link.html
+++ b/life-events/hub-link-demo/feature-as-hub-link.html
@@ -404,7 +404,7 @@ Reimbursing a sperm or ova (egg) donor or a surrogate for expenditures related t
 		<div class="col-md-8">
 			<div class="row">
 				<div class="col-sm-6">
-					<img src="img/feature-360x203.png" alt="" class="thumbnail">
+					<img src="../images/welcoming-a-child.jpg" alt="" class="thumbnail">
 				</div>
 				<div class="col-sm-6">
 					<h3><a class="stretched-link" href="#">Welcoming a child</a></h3>
