--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Supporting you through life's transitions - Canada.ca</title>
+<title>Manage life events - Canada.ca</title>
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <meta name="description" content=" " />
 <meta name="author" content=" "/>
