--- a/life-events/layered-theme-life-events.html
+++ b/life-events/layered-theme-life-events.html
@@ -116,10 +116,10 @@
 				<li><a href="#">Canada and the world</a></li>
 				<li><a href="#">Money and finances</a></li>
 				<li><a href="#">Science and innovation</a></li>
-				<li class="active"><a href="#">Manage life events</a></li>
 				<li><a href="#">Indigenous peoples</a></li>
 				<li><a href="#">Veterans and military</a></li>
 				<li><a href="#">Youth</a></li>
+				<li class="active"><a href="#">Manage life events</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -222,10 +222,11 @@
 					<li><a href="https://www.international.gc.ca/world-monde/index.aspx?lang=eng">Canada and the world</a></li>
 					<li><a href="https://www.canada.ca/en/services/finance.html">Money and finance</a></li>
 					<li><a href="https://www.canada.ca/en/services/science.html">Science and innovation</a></li>
-					<li><a href="#">Life's transitions</a></li>
 					<li><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous peoples</a></li>
 					<li><a href="https://www.canada.ca/en/services/veterans-military.html">Veterans and military</a></li>
-					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li></ul>
+					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li>
+					<li><a href="#">Manage life events</a></li>
+				</ul>
 			</nav>
 		</div>
 	</div>
