--- a/life-events/theme-life-events.html
+++ b/life-events/theme-life-events.html
@@ -210,7 +210,7 @@
 					<li><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous Peoples</a></li>
 					<li><a href="https://www.canada.ca/en/services/veterans-military.html">Veterans and military</a></li>
 					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li>
-					<li><a href="#">Managing life events</a></li>
+					<li><a href="#">Manage life events</a></li>
 				</ul>
 			</nav>
 		</div>
